--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,196 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --text: 139 61% 6%;
+    --text-50: 139 62% 95%;
+    --text-100: 139 61% 90%;
+    --text-200: 139 61% 80%;
+    --text-300: 139 61% 70%;
+    --text-400: 139 61% 60%;
+    --text-500: 139 61% 50%;
+    --text-600: 139 61% 40%;
+    --text-700: 139 61% 30%;
+    --text-800: 139 61% 20%;
+    --text-900: 139 61% 10%;
+    --text-950: 139 62% 5%;
+
+    --background: 140 60% 99%;
+    --background-50: 140 60% 95%;
+    --background-100: 139 61% 90%;
+    --background-200: 140 61% 80%;
+    --background-300: 140 59% 70%;
+    --background-400: 140 60% 60%;
+    --background-500: 140 60% 50%;
+    --background-600: 140 60% 40%;
+    --background-700: 140 59% 30%;
+    --background-800: 140 61% 20%;
+    --background-900: 139 61% 10%;
+    --background-950: 140 60% 5%;
+
+    --primary: 137 63% 54%;
+    --primary-50: 139 62% 95%;
+    --primary-100: 138 65% 90%;
+    --primary-200: 137 63% 80%;
+    --primary-300: 137 63% 70%;
+    --primary-400: 137 63% 60%;
+    --primary-500: 137 63% 50%;
+    --primary-600: 137 63% 40%;
+    --primary-700: 137 63% 30%;
+    --primary-800: 137 63% 20%;
+    --primary-900: 138 65% 10%;
+    --primary-950: 135 62% 5%;
+
+    --secondary: 185 62% 72%;
+    --secondary-50: 184 62% 95%;
+    --secondary-100: 184 61% 90%;
+    --secondary-200: 186 63% 80%;
+    --secondary-300: 185 62% 70%;
+    --secondary-400: 185 62% 60%;
+    --secondary-500: 185 62% 50%;
+    --secondary-600: 185 62% 40%;
+    --secondary-700: 185 62% 30%;
+    --secondary-800: 186 63% 20%;
+    --secondary-900: 184 61% 10%;
+    --secondary-950: 188 62% 5%;
+
+    --accent: 203 62% 61%;
+    --accent-50: 202 62% 95%;
+    --accent-100: 203 61% 90%;
+    --accent-200: 203 63% 80%;
+    --accent-300: 203 62% 70%;
+    --accent-400: 203 62% 60%;
+    --accent-500: 203 62% 50%;
+    --accent-600: 203 62% 40%;
+    --accent-700: 203 62% 30%;
+    --accent-800: 203 63% 20%;
+    --accent-900: 203 61% 10%;
+    --accent-950: 203 62% 5%;
+
+    /* --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+ 
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+ 
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+ 
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+ 
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+ 
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+ 
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%; */
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  .dark {
+    --text: 139 61% 94%;
+    --text-50: 139 62% 5%;
+    --text-100: 139 61% 10%;
+    --text-200: 139 61% 20%;
+    --text-300: 139 61% 30%;
+    --text-400: 139 61% 40%;
+    --text-500: 139 61% 50%;
+    --text-600: 139 61% 60%;
+    --text-700: 139 61% 70%;
+    --text-800: 139 61% 80%;
+    --text-900: 139 61% 90%;
+    --text-950: 139 62% 95%;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+    --background: 140 60% 1%;
+    --background-50: 140 60% 5%;
+    --background-100: 139 61% 10%;
+    --background-200: 140 61% 20%;
+    --background-300: 140 59% 30%;
+    --background-400: 140 60% 40%;
+    --background-500: 140 60% 50%;
+    --background-600: 140 60% 60%;
+    --background-700: 140 59% 70%;
+    --background-800: 140 61% 80%;
+    --background-900: 139 61% 90%;
+    --background-950: 140 60% 95%;
+
+    --primary: 137 63% 46%;
+    --primary-50: 135 62% 5%;
+    --primary-100: 138 65% 10%;
+    --primary-200: 137 63% 20%;
+    --primary-300: 137 63% 30%;
+    --primary-400: 137 63% 40%;
+    --primary-500: 137 63% 50%;
+    --primary-600: 137 63% 60%;
+    --primary-700: 137 63% 70%;
+    --primary-800: 137 63% 80%;
+    --primary-900: 138 65% 90%;
+    --primary-950: 139 62% 95%;
+
+    --secondary: 185 62% 28%;
+    --secondary-50: 188 62% 5%;
+    --secondary-100: 184 61% 10%;
+    --secondary-200: 186 63% 20%;
+    --secondary-300: 185 62% 30%;
+    --secondary-400: 185 62% 40%;
+    --secondary-500: 185 62% 50%;
+    --secondary-600: 185 62% 60%;
+    --secondary-700: 185 62% 70%;
+    --secondary-800: 186 63% 80%;
+    --secondary-900: 184 61% 90%;
+    --secondary-950: 184 62% 95%;
+
+    --accent: 203 62% 39%;
+    --accent-50: 203 62% 5%;
+    --accent-100: 203 61% 10%;
+    --accent-200: 203 63% 20%;
+    --accent-300: 203 62% 30%;
+    --accent-400: 203 62% 40%;
+    --accent-500: 203 62% 50%;
+    --accent-600: 203 62% 60%;
+    --accent-700: 203 62% 70%;
+    --accent-800: 203 63% 80%;
+    --accent-900: 203 61% 90%;
+    --accent-950: 202 62% 95%;
+
+    /* --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+ 
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+ 
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+ 
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+ 
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+ 
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+ 
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+ 
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%; */
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
   }
 }
