--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,30 +69,6 @@
     --accent-900: 203 61% 10%;
     --accent-950: 203 62% 5%;
 
-    /* --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
- 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
- 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
- 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
- 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
- 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%; */
-
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
@@ -166,30 +142,6 @@
     --accent-900: 203 61% 90%;
     --accent-950: 202 62% 95%;
 
-    /* --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
- 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
- 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
- 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
- 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
- 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
- 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%; */
-
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
@@ -204,5 +156,62 @@
   .transition-rect-expanded {
     y: 45;
     transition: y 300ms ease-in, rotate 300ms ease-in 300ms, opacity 0ms 300ms;
+  }
+  .clip-path-r {
+    clip-path: path(
+      "M90,10 C100,0 100,0 110,10 190,90 190,90 190,90 200,100 200,100 190,110 190,110 110,190 110,190 100,200 100,200 90,190 90,190 10,110 10,110 0,100 0,100 10,90Z"
+    );
+  }
+  .clip-path-s {
+    clip-path: path(
+      "M0,0 C0,0 200,0 200,0 200,0 200,100 200,100 200,100 200,200 200,200 200,200 100,200 100,200 100,200 100,200 0,200 0,200 0,100 0,100 0,100 0,100 0,100Z"
+    );
+  }
+  .hover-g {
+    &:has(:hover) img:not(:hover),
+    &:has(:focus) img:not(:focus) {
+      filter: brightness(0.8) contrast(0.7);
+    }
+  }
+
+  @media (max-width: 640px) {
+    .header {
+      &:has(button[aria-expanded="false"]) {
+        height: 0;
+
+        ul {
+          z-index: -1;
+          pointer-events: none;
+        }
+
+        button {
+          z-index: 10;
+        }
+      }
+      /* &:has(button[aria-expanded="false"]) ul {
+        z-index: -1;
+        pointer-events: none;
+      } */
+
+      /* &:has(button[aria-expanded="false"]) button {
+        z-index: 10;
+      } */
+
+      &:has(button[aria-expanded="true"]) {
+        ul {
+          pointer-events: all;
+        }
+
+        + main {
+          position: relative;
+          z-index: -10;
+        }
+      }
+
+      /* &:has(button[aria-expanded="true"]) + main {
+        position: relative;
+        z-index: -10;
+      } */
+    }
   }
 }
